fix dialog menu on safari & focus more ..

--- a/css/style.css
+++ b/css/style.css
@@ -266,8 +266,8 @@ header > menu a:hover {
 
 @media (prefers-reduced-motion: no-preference) {
 
-  header > button:focus,
-  header > menu a:focus {
+  header > button:focus-visible,
+  header > menu a:focus-visible {
     outline-offset: 3px;
     outline: 3px solid var(--colors-blue2);
     transition: outline-offset 200ms ease;
@@ -281,9 +281,6 @@ header > menu a:hover {
 dialog {
   background-color: transparent;
   border: 0;
-  
-  display: grid;
-  justify-content: start;
 
   margin: auto;
   padding-left: 0;
@@ -312,6 +309,7 @@ dialog > menu {
   display: grid;
   justify-items: center;
   gap: var(--space-2);
+  padding: var(--space-2);
 }
 
 dialog > menu button {
@@ -351,13 +349,13 @@ dialog > menu button.is-selected:hover {
 
 @media (prefers-reduced-motion: no-preference) {
 
-  dialog > menu button:focus {
+  dialog > menu button:focus-visible {
     outline-offset: 3px;
     outline: 3px solid var(--colors-blue2);
     transition: outline-offset 200ms ease;
   }
   
-  dialog > menu button.is-selected:focus {
+  dialog > menu button.is-selected:focus-visible {
     outline-offset: 3px;
     outline: 3px solid var(--colors-red3);
     transition: outline-offset 200ms ease;
@@ -577,7 +575,7 @@ footer > a:hover {
 
 @media (prefers-reduced-motion: no-preference) {
 
-  footer > a:focus {
+  footer > a:focus-visible {
     outline-offset: 3px;
     outline: 3px solid var(--colors-blue2);
     transition: outline-offset 200ms ease;
